# pet-fastapi-booking

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  folder_utils.py  pyproject.toml  pytest.ini  requirements.txt
app/: conftest.py  database.py  exceptions.py  logger.py  main.py  routers.py  service.py  settings.py
app/admin/: auth.py  views.py
app/bookings/: models.py  router.py  schemas.py  service.py
app/hotels/: models.py  router.py  schemas.py  service.py
app/hotels/rooms/: models.py  router.py  schemas.py  service.py
app/images/: router.py
app/migrations/: env.py
app/migrations/versions/: e73e8aab6a6e_initial.py
app/pages/: router.py
app/tasks/: celeryconfig.py  email_templates.py  tasks.py
app/templates/: hotels.html
app/tests/: conftest.py  mock_bookings.json  mock_hotels.json  mock_rooms.json  mock_users.json
app/tests/integration_tests/bookings_tests/: api_tests.py  model_tests.py
app/tests/integration_tests/users_tests/: api_tests.py
app/tests/unit_tests/hotels_tests/: api_tests.py
app/tests/unit_tests/users_tests/: model_tests.py
app/users/: auth.py  dependencies.py  models.py  router.py  schemas.py  service.py
assets/: hotels.csv  rooms.csv
docker/: celery.sh
