[tool.poetry]
name = "booking"
version = "0.1.0"
description = "Simple hotel booking site"
authors = ["Sosnovskikh Kirill <sosnovskix.kir2001@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
pydantic = {extras = ["email"], version = "^2.7.0"}
pydantic-settings = "^2.2.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
gunicorn = "^21.2.0"
fastapi-cache2 = "^0.2.1"
redis = "^5.0.3"
sentry-sdk = "^1.45.0"
alembic = "^1.13.1"
pillow = "^10.3.0"
celery = "^5.3.6"
flower = "^2.0.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-json-logger = "^2.0.7"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
sqladmin = "^0.16.1"
asyncpg = "^0.29.0"
bcrypt = "4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.7"
httpx = "^0.27.0"
pyright = "^1.1.358"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["app"]
pythonVersion = "3.11"
pythonPlatform = "Windows"